// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select pagination: It must show the pagination according to the number of selected tasks: 2,3,6 o 9  1`] = `
<body>
  <div>
    <div
      class="sc-kJwmPe ciIVii"
    >
      <div>
        <div
          class="sc-dyTUbJ bVmDfC"
        >
          <div
            class="sc-kJpdyg eLqRBJ"
          />
          <div
            class="sc-dzbdsH bEHWeu"
          >
            Please wait...
          </div>
        </div>
      </div>
      <div
        class="sc-ksXGtu dpPWrg"
      >
        <div
          class="sc-fIwssx ktWvEs"
        >
          <img
            alt="logo-react+ts"
            class="sc-OKtSx jsWFkv"
            src="react-ts.png"
          />
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectFavorite"
          >
            <option
              value="all"
            >
              Favorites/Not Favorites
            </option>
            <option
              value="favorites"
            >
              Favorites
            </option>
            <option
              value="not favorites"
            >
              Not favorites
            </option>
          </select>
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectStatus"
          >
            <option
              value="all"
            >
              Pending/ Progress/ Success
            </option>
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="progress"
            >
              Progress
            </option>
            <option
              value="success"
            >
              Success
            </option>
          </select>
        </div>
        <input
          class="sc-fecFrY fyGkJg"
          data-testid="filterInput"
          placeholder="🔍 Search..."
          type="search"
          value=""
        />
      </div>
      <div
        class="sc-dSbvwS gIPJdb"
      >
        <button
          class="sc-eSdRwT ftKWQf"
          data-testid="previusButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="sc-jNkFXo chpaNi"
        >
          1
           / 
          0
        </span>
        <button
          class="sc-kNnbXp dDpoYh"
          data-testid="nextButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="sc-dmovaM iFmTdi"
      >
        <select
          class="sc-gWHAAX dAeaYQ"
          data-testid="selectPagination"
        >
          <option
            value="2"
          >
            2 Rows
          </option>
          <option
            value="3"
          >
            3 Rows
          </option>
          <option
            value="6"
          >
            6 Rows
          </option>
          <option
            value="9"
          >
            9 Rows
          </option>
        </select>
      </div>
      <div
        class="sc-brSOsn dYZOGQ"
      >
        <div
          class="sc-ejWHKt kixjRn"
        >
          <p
            class="sc-eWhHU FTKTQ"
          >
            No tasks to display
          </p>
        </div>
      </div>
      <button
        class="sc-iCnXOK fSygme"
        data-testid="addTaskButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`Select pagination: It must show the pagination according to the number of selected tasks: 2,3,6 o 9  2`] = `
<body>
  <div>
    <div
      class="sc-kJwmPe ciIVii"
    >
      <div>
        <div
          class="sc-dyTUbJ bVmDfC"
        >
          <div
            class="sc-kJpdyg eLqRBJ"
          />
          <div
            class="sc-dzbdsH bEHWeu"
          >
            Please wait...
          </div>
        </div>
      </div>
      <div
        class="sc-ksXGtu dpPWrg"
      >
        <div
          class="sc-fIwssx ktWvEs"
        >
          <img
            alt="logo-react+ts"
            class="sc-OKtSx jsWFkv"
            src="react-ts.png"
          />
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectFavorite"
          >
            <option
              value="all"
            >
              Favorites/Not Favorites
            </option>
            <option
              value="favorites"
            >
              Favorites
            </option>
            <option
              value="not favorites"
            >
              Not favorites
            </option>
          </select>
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectStatus"
          >
            <option
              value="all"
            >
              Pending/ Progress/ Success
            </option>
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="progress"
            >
              Progress
            </option>
            <option
              value="success"
            >
              Success
            </option>
          </select>
        </div>
        <input
          class="sc-fecFrY fyGkJg"
          data-testid="filterInput"
          placeholder="🔍 Search..."
          type="search"
          value=""
        />
      </div>
      <div
        class="sc-dSbvwS gIPJdb"
      >
        <button
          class="sc-eSdRwT ftKWQf"
          data-testid="previusButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="sc-jNkFXo chpaNi"
        >
          1
           / 
          0
        </span>
        <button
          class="sc-kNnbXp dDpoYh"
          data-testid="nextButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="sc-dmovaM iFmTdi"
      >
        <select
          class="sc-gWHAAX dAeaYQ"
          data-testid="selectPagination"
        >
          <option
            value="2"
          >
            2 Rows
          </option>
          <option
            value="3"
          >
            3 Rows
          </option>
          <option
            value="6"
          >
            6 Rows
          </option>
          <option
            value="9"
          >
            9 Rows
          </option>
        </select>
      </div>
      <div
        class="sc-brSOsn dYZOGQ"
      >
        <div
          class="sc-ejWHKt kixjRn"
        >
          <p
            class="sc-eWhHU FTKTQ"
          >
            No tasks to display
          </p>
        </div>
      </div>
      <button
        class="sc-iCnXOK fSygme"
        data-testid="addTaskButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`Select pagination: It must show the pagination according to the number of selected tasks: 2,3,6 o 9  3`] = `
<body>
  <div>
    <div
      class="sc-kJwmPe ciIVii"
    >
      <div>
        <div
          class="sc-dyTUbJ bVmDfC"
        >
          <div
            class="sc-kJpdyg eLqRBJ"
          />
          <div
            class="sc-dzbdsH bEHWeu"
          >
            Please wait...
          </div>
        </div>
      </div>
      <div
        class="sc-ksXGtu dpPWrg"
      >
        <div
          class="sc-fIwssx ktWvEs"
        >
          <img
            alt="logo-react+ts"
            class="sc-OKtSx jsWFkv"
            src="react-ts.png"
          />
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectFavorite"
          >
            <option
              value="all"
            >
              Favorites/Not Favorites
            </option>
            <option
              value="favorites"
            >
              Favorites
            </option>
            <option
              value="not favorites"
            >
              Not favorites
            </option>
          </select>
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectStatus"
          >
            <option
              value="all"
            >
              Pending/ Progress/ Success
            </option>
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="progress"
            >
              Progress
            </option>
            <option
              value="success"
            >
              Success
            </option>
          </select>
        </div>
        <input
          class="sc-fecFrY fyGkJg"
          data-testid="filterInput"
          placeholder="🔍 Search..."
          type="search"
          value=""
        />
      </div>
      <div
        class="sc-dSbvwS gIPJdb"
      >
        <button
          class="sc-eSdRwT ftKWQf"
          data-testid="previusButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="sc-jNkFXo chpaNi"
        >
          1
           / 
          0
        </span>
        <button
          class="sc-kNnbXp dDpoYh"
          data-testid="nextButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="sc-dmovaM iFmTdi"
      >
        <select
          class="sc-gWHAAX dAeaYQ"
          data-testid="selectPagination"
        >
          <option
            value="2"
          >
            2 Rows
          </option>
          <option
            value="3"
          >
            3 Rows
          </option>
          <option
            value="6"
          >
            6 Rows
          </option>
          <option
            value="9"
          >
            9 Rows
          </option>
        </select>
      </div>
      <div
        class="sc-brSOsn dYZOGQ"
      >
        <div
          class="sc-ejWHKt kixjRn"
        >
          <p
            class="sc-eWhHU FTKTQ"
          >
            No tasks to display
          </p>
        </div>
      </div>
      <button
        class="sc-iCnXOK fSygme"
        data-testid="addTaskButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`Select pagination: It must show the pagination according to the number of selected tasks: 2,3,6 o 9  4`] = `
<body>
  <div>
    <div
      class="sc-kJwmPe ciIVii"
    >
      <div>
        <div
          class="sc-dyTUbJ iSyVGb"
        >
          <div
            class="sc-kJpdyg eLqRBJ"
          />
          <div
            class="sc-dzbdsH bEHWeu"
          >
            Please wait...
          </div>
        </div>
      </div>
      <div
        class="sc-ksXGtu dpPWrg"
      >
        <div
          class="sc-fIwssx ktWvEs"
        >
          <img
            alt="logo-react+ts"
            class="sc-OKtSx jsWFkv"
            src="react-ts.png"
          />
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectFavorite"
          >
            <option
              value="all"
            >
              Favorites/Not Favorites
            </option>
            <option
              value="favorites"
            >
              Favorites
            </option>
            <option
              value="not favorites"
            >
              Not favorites
            </option>
          </select>
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectStatus"
          >
            <option
              value="all"
            >
              Pending/ Progress/ Success
            </option>
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="progress"
            >
              Progress
            </option>
            <option
              value="success"
            >
              Success
            </option>
          </select>
        </div>
        <input
          class="sc-fecFrY fyGkJg"
          data-testid="filterInput"
          placeholder="🔍 Search..."
          type="search"
          value=""
        />
      </div>
      <div
        class="sc-dSbvwS gIPJdb"
      >
        <button
          class="sc-eSdRwT ftKWQf"
          data-testid="previusButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="sc-jNkFXo chpaNi"
        >
          1
           / 
          1
        </span>
        <button
          class="sc-kNnbXp dDpoYh"
          data-testid="nextButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="sc-dmovaM iFmTdi"
      >
        <select
          class="sc-gWHAAX dAeaYQ"
          data-testid="selectPagination"
        >
          <option
            value="2"
          >
            2 Rows
          </option>
          <option
            value="3"
          >
            3 Rows
          </option>
          <option
            value="6"
          >
            6 Rows
          </option>
          <option
            value="9"
          >
            9 Rows
          </option>
        </select>
      </div>
      <div
        class="sc-brSOsn dYZOGQ"
      >
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-10"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  Tiberius
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-9"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  dfsdffffff
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-8"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  wqdw
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="sc-iCnXOK fSygme"
        data-testid="addTaskButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`Select pagination: It must show the pagination according to the number of selected tasks: 2,3,6 o 9  5`] = `
<body>
  <div>
    <div
      class="sc-kJwmPe ciIVii"
    >
      <div>
        <div
          class="sc-dyTUbJ iSyVGb"
        >
          <div
            class="sc-kJpdyg eLqRBJ"
          />
          <div
            class="sc-dzbdsH bEHWeu"
          >
            Please wait...
          </div>
        </div>
      </div>
      <div
        class="sc-ksXGtu dpPWrg"
      >
        <div
          class="sc-fIwssx ktWvEs"
        >
          <img
            alt="logo-react+ts"
            class="sc-OKtSx jsWFkv"
            src="react-ts.png"
          />
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectFavorite"
          >
            <option
              value="all"
            >
              Favorites/Not Favorites
            </option>
            <option
              value="favorites"
            >
              Favorites
            </option>
            <option
              value="not favorites"
            >
              Not favorites
            </option>
          </select>
        </div>
        <div
          class="sc-dEsUz liqYnx"
        >
          <select
            class="sc-eItWsw jTeaCP"
            data-testid="filterSelectStatus"
          >
            <option
              value="all"
            >
              Pending/ Progress/ Success
            </option>
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="progress"
            >
              Progress
            </option>
            <option
              value="success"
            >
              Success
            </option>
          </select>
        </div>
        <input
          class="sc-fecFrY fyGkJg"
          data-testid="filterInput"
          placeholder="🔍 Search..."
          type="search"
          value=""
        />
      </div>
      <div
        class="sc-dSbvwS gIPJdb"
      >
        <button
          class="sc-eSdRwT ftKWQf"
          data-testid="previusButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-left "
            data-icon="caret-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 278.6c-12.5-12.5-12.5-32.8 0-45.3l128-128c9.2-9.2 22.9-11.9 34.9-6.9s19.8 16.6 19.8 29.6l0 256c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="sc-jNkFXo chpaNi"
        >
          1
           / 
          1
        </span>
        <button
          class="sc-kNnbXp dDpoYh"
          data-testid="nextButton"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-caret-right "
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="sc-dmovaM iFmTdi"
      >
        <select
          class="sc-gWHAAX dAeaYQ"
          data-testid="selectPagination"
        >
          <option
            value="2"
          >
            2 Rows
          </option>
          <option
            value="3"
          >
            3 Rows
          </option>
          <option
            value="6"
          >
            6 Rows
          </option>
          <option
            value="9"
          >
            9 Rows
          </option>
        </select>
      </div>
      <div
        class="sc-brSOsn dYZOGQ"
      >
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-10"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  Tiberius
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-9"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  dfsdffffff
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-fABZjn kqQypp"
        >
          <div
            class="sc-gUMnWI fTTHQu"
          >
            <div
              class="sc-fWFeAW blAJfP"
            >
              <button
                class="sc-jnqLxu dPicJe"
                data-testid="maximizedButtonCard-8"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down "
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="sc-hUOJWJ dZTKDs"
            >
              <label
                class="sc-dPwPAC foYBEz"
              >
                Title:
                <p
                  class="sc-ePzlA-D fgfZmP"
                >
                    
                  wqdw
                </p>
                  
              </label>
              <label
                class="sc-dPwPAC foYBEz"
              >
                 Status: 
              </label>
              <select
                class="sc-gWHAAX dAeaYQ"
                data-testid="selectStatusCard"
              >
                <option
                  value="pending"
                >
                  Pending
                </option>
                <option
                  value="progress"
                >
                  Progress
                </option>
                <option
                  value="success"
                >
                  Success
                </option>
              </select>
              <div
                class="sc-gjJAnY kRUkuZ"
              >
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="favoriteButtonCard"
                  style="color: black;"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-star "
                    data-icon="star"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 576 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="editButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pen-to-square "
                    data-icon="pen-to-square"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="deleteButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="upButtonCard"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-up "
                    data-icon="arrow-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <button
                  class="sc-hjLWnZ fMmarZ"
                  data-testid="downButtonCard"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-arrow-down "
                    data-icon="arrow-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="sc-iCnXOK fSygme"
        data-testid="addTaskButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
